--- a/foundry.toml
+++ b/foundry.toml
@@ -4,5 +4,6 @@ out = "out"
 libs = ["lib"]
 fs_permissions = [{ access = "read-write" , path = "./"}]
 remappings = ["@openzeppelin/contracts=lib/openzeppelin-contracts/contracts"]
+evm_version = "cancun"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
